--- a/src/app/interface/pages/extended-history/extended-history.component.html
+++ b/src/app/interface/pages/extended-history/extended-history.component.html
@@ -34,4 +34,10 @@
       }
     </div>
   </div>
+} @else {
+    <a
+        routerLink="/extended-history/upload"
+        class="py-2 px-2 sm:px-8 w-full sm:w-max font-black text-lg sm:text-base text-center bg-primary rounded-sm"
+        >Upload data</a
+      >
 }
