add/whatever i have aded

--- a/src/app/interface/pages/extended-history/extended-history.component.html
+++ b/src/app/interface/pages/extended-history/extended-history.component.html
@@ -58,8 +58,9 @@
             An error occurred while loading your extended history.
           </p>
         </div>
+      } @else {
+        {{ this.userExtendedDataLoadingState() }}
       }
-      <!-- {{ this.userExtendedDataLoadingState() }} -->
     </div>
   </div>
 } @else {
