--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,4 +1,4 @@
-@use "mixins" as mixins;
+// @use "mixins" as mixins;
 
 ::selection {
     background: var(--primary-color);
@@ -24,5 +24,5 @@ html, body {
     color: var(--white-color);
     font-family: var(--standard-font);
 
-    @include mixins.custom-scrollbar;
+    // @include mixins.custom-scrollbar;
 }
