--- a/src/app/modules/main-app/main-page/main.component.scss
+++ b/src/app/modules/main-app/main-page/main.component.scss
@@ -18,7 +18,7 @@ $header-height: 64px;
     overflow-x: hidden;
   }
 
-  .header {
+  &__header {
     height: $header-height;
 
     overflow-y: hidden;
@@ -29,15 +29,26 @@ $header-height: 64px;
     z-index: 100;
   }
 
-  .router {
+  &__router {
     height: 100%;
     padding-top: $header-height;
 
     overflow-y: auto;
     scrollbar-width: none;
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
     &::-webkit-scrollbar {
       display: none; /* Chrome, Safari, and Opera */
     }
+  }
+
+  &__loading-screen {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
   }
 }
