--- a/src/app/shared/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/shared/widgets/nav-bar/nav-bar.component.html
@@ -6,8 +6,8 @@
       <a routerLink="/">
         <h1
           class="w-full justify-center text-center text-lg md:text-2xl font-black text-primary hover:text-primary-light"
+          i18n="@@vibesTrackerTitle"
         >
-          vibes tracker
         </h1>
       </a>
     </div>
