--- a/src/app/modules/main-app/main-page/main.component.html
+++ b/src/app/modules/main-app/main-page/main.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="main__header">
-    <app-nav-bar></app-nav-bar>
+    <app-nav-bar />
   </div>
 
   @if (this.userIsLoggedIn() === 'resolved') {
