--- a/src/app/modules/login/login-page/login.component.html
+++ b/src/app/modules/login/login-page/login.component.html
@@ -1,13 +1,11 @@
-<div
-  class="bg-dark p-8 m-8 rounded-sm flex flex-col items-center justify-center gap-4"
->
+<div class="bg-dark p-8 m-8 rounded-sm flex flex-col items-center justify-center gap-4">
   <div>
-    <h1 class="text-3xl font-black">vibes tracker</h1>
-    <p>{{this.loadingState}}</p>
+    <h1 class="text-3xl font-black" i18n="@@vibesTrackerTitle">vibes tracker</h1>
+    <!-- <p>{{this.loadingState}}</p> -->
   </div>
   <a [href]="this.getAuthorizationUrl()" class="w-full">
     <button class="w-full py-2 bg-primary rounded-sm">
-      <p class="font-black">Login with spotify</p>
+      <p class="font-black" i18n="@@login_loginWithSpotify">login with spotify</p>
     </button>
   </a>
 </div>
