--- a/src/app/modules/main-app/pages/user-top-items/user-top-items-selector/user-top-items-selector.component.html
+++ b/src/app/modules/main-app/pages/user-top-items/user-top-items-selector/user-top-items-selector.component.html
@@ -5,14 +5,14 @@
       [class]="this.itemsType === 'artists' ? 'text-primary' : ''"
       (click)="this.changeItemsType('artists')"
     >
-      <p class="font-black w-full text-center">artists</p>
+      <p class="font-black w-full text-center" i18n="@@selector_artists">artists</p>
     </button>
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.itemsType === 'albums' ? 'text-primary' : ''"
       (click)="this.changeItemsType('albums')"
     >
-      <p class="w-full text-center">albums</p>
+      <p class="w-full text-center" i18n="@@selector_albums">albums</p>
     </button>
     <!-- <button
       class="p-2 w-full flex justify-between align-center"
@@ -25,7 +25,7 @@
       [class]="this.itemsType === 'tracks' ? 'text-primary' : ''"
       (click)="this.changeItemsType('tracks')"
     >
-      <p class="w-full text-center">tracks</p>
+      <p class="w-full text-center" i18n="@@selector_tracks">tracks</p>
     </button>
   </div>
 
@@ -35,21 +35,21 @@
       [class]="this.periodOfTime === 'short_term' ? 'text-primary' : ''"
       (click)="this.changePeriodOfTime('short_term')"
     >
-      <p class="w-full text-center">4 weeks</p>
+      <p class="w-full text-center" i18n="@@selector_shortTerm">4 weeks</p>
     </button>
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.periodOfTime === 'medium_term' ? 'text-primary' : ''"
       (click)="this.changePeriodOfTime('medium_term')"
     >
-      <p class="w-full text-center">6 months</p>
+      <p class="w-full text-center" i18n="@@selector_mediumTerm">6 months</p>
     </button>
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.periodOfTime === 'long_term' ? 'text-primary' : ''"
       (click)="this.changePeriodOfTime('long_term')"
     >
-      <p class="w-full text-center">12 months</p>
+      <p class="w-full text-center" i18n="@@selector_longTerm">12 months</p>
     </button>
   </div>
 </div>
