--- a/src/app/shared/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/shared/widgets/nav-bar/nav-bar.component.html
@@ -8,6 +8,7 @@
           class="w-full justify-center text-center text-lg md:text-2xl font-black text-primary hover:text-primary-light"
           i18n="@@vibesTrackerTitle"
         >
+          vibes tracker
         </h1>
       </a>
     </div>
@@ -15,6 +16,7 @@
       <a routerLink="/top">
         <p
           class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white"
+          i18n="@@nav_simpleTop"
         >
           simple top
         </p>
@@ -24,6 +26,7 @@
       <a routerLink="/extended-history">
         <p
           class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white"
+          i18n="@@nav_extendedTop"
         >
           extended top
         </p>
