--- a/src/app/modules/main-app/pages/user-top-items/user-top-items-selector/user-top-items-selector.component.html
+++ b/src/app/modules/main-app/pages/user-top-items/user-top-items-selector/user-top-items-selector.component.html
@@ -5,27 +5,21 @@
       [class]="this.itemsType === 'artists' ? 'text-primary' : ''"
       (click)="this.changeItemsType('artists')"
     >
-      <p class="font-black w-full text-center" i18n="@@selector_artists">artists</p>
+      <p class="font-black w-full text-center">{{ 'selector_artists' | translate }}</p>
     </button>
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.itemsType === 'albums' ? 'text-primary' : ''"
       (click)="this.changeItemsType('albums')"
     >
-      <p class="w-full text-center" i18n="@@selector_albums">albums</p>
+      <p class="w-full text-center">{{ 'selector_albums' | translate }}</p>
     </button>
-    <!-- <button
-      class="p-2 w-full flex justify-between align-center"
-      (click)="this.changeItemsType('genres')"
-    >
-      <p class="w-full text-center">genres</p>
-    </button> -->
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.itemsType === 'tracks' ? 'text-primary' : ''"
       (click)="this.changeItemsType('tracks')"
     >
-      <p class="w-full text-center" i18n="@@selector_tracks">tracks</p>
+      <p class="w-full text-center">{{ 'selector_tracks' | translate }}</p>
     </button>
   </div>
 
@@ -35,21 +29,21 @@
       [class]="this.periodOfTime === 'short_term' ? 'text-primary' : ''"
       (click)="this.changePeriodOfTime('short_term')"
     >
-      <p class="w-full text-center" i18n="@@selector_shortTerm">4 weeks</p>
+      <p class="w-full text-center">{{ 'selector_shortTerm' | translate }}</p>
     </button>
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.periodOfTime === 'medium_term' ? 'text-primary' : ''"
       (click)="this.changePeriodOfTime('medium_term')"
     >
-      <p class="w-full text-center" i18n="@@selector_mediumTerm">6 months</p>
+      <p class="w-full text-center">{{ 'selector_mediumTerm' | translate }}</p>
     </button>
     <button
       class="p-2 w-full flex justify-between align-center text-gray"
       [class]="this.periodOfTime === 'long_term' ? 'text-primary' : ''"
       (click)="this.changePeriodOfTime('long_term')"
     >
-      <p class="w-full text-center" i18n="@@selector_longTerm">12 months</p>
+      <p class="w-full text-center">{{ 'selector_longTerm' | translate }}</p>
     </button>
   </div>
 </div>
