--- a/src/libs/screen-notification/ui/screen-notification/screen-notification.component.scss
+++ b/src/libs/screen-notification/ui/screen-notification/screen-notification.component.scss
@@ -1,7 +1,10 @@
 :host {
-    pointer-events: none;
+  pointer-events: none;
+
+  height: 100%;
+  width: 100%;
 }
 
 * {
-    pointer-events:all;
+  pointer-events: all;
 }
